[project]
name = "lobby"
version = "0.3.0"
description = "One tunnel for all your local apps: a hub daemon that indexes and reverse-proxies cowrite/stagehand/databrowser-style servers behind a single public URL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daniel Tan" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
lobby = "lobby.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lobby"]
